Fix footer covering main content

--- a/sass/components/footer/_footer.scss
+++ b/sass/components/footer/_footer.scss
@@ -80,8 +80,5 @@ footer {
   position: fixed;
   left: 0;
   bottom: 0;
-  width: 100%;
-  background-color: red;
-  color: white;
   text-align: center;
 }
