--- a/style.css
+++ b/style.css
@@ -1116,9 +1116,6 @@ footer {
   position: fixed;
   left: 0;
   bottom: 0;
-  width: 100%;
-  background-color: red;
-  color: white;
   text-align: center;
 }
 
@@ -1582,9 +1579,6 @@ footer {
   position: fixed;
   left: 0;
   bottom: 0;
-  width: 100%;
-  background-color: red;
-  color: white;
   text-align: center;
 }
 
@@ -2078,9 +2072,6 @@ footer {
   position: fixed;
   left: 0;
   bottom: 0;
-  width: 100%;
-  background-color: red;
-  color: white;
   text-align: center;
 }
 
@@ -2544,9 +2535,6 @@ footer {
   position: fixed;
   left: 0;
   bottom: 0;
-  width: 100%;
-  background-color: red;
-  color: white;
   text-align: center;
 }
 
